<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">traineeship-network</string>
    <string name="action_settings">Settings</string>
    <string name="text_handler">Handler</string>
    <string name="text_view_default">Default Text</string>
    <string name="crash_me_text">Crash Me!</string>
    <string name="view_post_text">View post</string>
    <string name="run_ui_text">Run UI</string>
    <string name="handler_text">Handler</string>
    <string name="text_async_task">AsyncTask</string>
    <string name="async_task_text">AsyncTask run</string>
    <string name="successful_text">Successful !</string>
    <string name="fail_text">Fail…</string>
    <string name="start_service_text">Start Service</string>
    <string name="text_service">Service</string>
    <string name="prefix_result">Result :</string>
    <string name="loading_text">Load…</string>
    <string name="text_student">Student Task</string>
    <string name="load_message">Loading news. Please wait!</string>
    <string name="no_connetion">No internet connection. Please connect!</string>
</resources>
