<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.noveo.traineeship.network.activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button android:id="@+id/handler_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/text_handler"/>

        <Button android:id="@+id/async_task_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/text_async_task"/>

        <Button android:id="@+id/service_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/text_service"/>

        <Button android:id="@+id/student_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/text_student"/>

    </LinearLayout>

</RelativeLayout>
